# emri_tdi_sampler

./: .gitmodules  analyze_dynesty.py  analyze_eryn.py  analyze_ultra.py  analyze_ultra_midway.py  emri_ultra_omp.sbatch  main_dynesty.py  main_eryn.py  main_ultranest.py  modules-used.txt  pyproject-gpu.toml  pyproject.toml  requirements-locked.txt  requirements.txt
results/: run_results.pkl
ultra_results/extra/: sampling-stuck-it%d.csv  sampling-stuck-it%d.npz
ultra_results/results/: points.hdf5
